--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "moment": "^2.14.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^1.8.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p src/tsconfig.json"
