--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "IS0 8601 repeating interval parsing and manipulation",
   "main": "index.js",
   "dependencies": {
-    "moment": "2.14.1"
+    "moment": "^2.21.0"
   },
   "devDependencies": {
     "typescript": "^1.8.10"
